<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <POU Name="P_control_global" Id="{a7a9c095-8cda-4718-9941-39253879d8f5}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM P_control_global
VAR
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[P_feedback_calculation();

IF GVL_P_CONTROL.P_loop_type THEN
	//
	GVL_P_CONTROL.P_block_output:= GVL_P_CONTROL.P_block_input;
END_IF]]></ST>
    </Implementation>
    <LineIds Name="P_control_global">
      <LineId Id="5" Count="0" />
      <LineId Id="9" Count="0" />
      <LineId Id="8" Count="0" />
      <LineId Id="12" Count="0" />
      <LineId Id="10" Count="1" />
    </LineIds>
  </POU>
</TcPlcObject>